--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,5 +8,6 @@ services:
             dockerfile: Dockerfile
         volumes:
             - .:/workdir
+            - ./.clasprc.json:/root/.clasprc.json
         working_dir: /workdir
         command: tail -f /dev/null
