Activate sheets API

--- a/src/appsscript.json
+++ b/src/appsscript.json
@@ -1,6 +1,12 @@
 {
-    "timeZone": "Asia/Tokyo",
-    "dependencies": {},
-    "exceptionLogging": "STACKDRIVER",
-    "runtimeVersion": "V8"
+  "timeZone": "Asia/Tokyo",
+  "dependencies": {
+    "enabledAdvancedServices": [{
+      "userSymbol": "Sheets",
+      "serviceId": "sheets",
+      "version": "v4"
+    }]
+  },
+  "exceptionLogging": "STACKDRIVER",
+  "runtimeVersion": "V8"
 }
